# aeterna

./: LICENSE  README.md  build.rs
.github/: copilot-instructions.md
aam/: inference.rs  mod.rs  tokenizer.rs  weights.rs
aeterna-bench/: Cargo.toml
aeterna-bench/.cargo/: config.toml
aeterna-bench/src/: main.rs
arch/: mod.rs
arch/x86_64/: apic.rs  fbconsole.rs  font.rs  framebuffer.rs  gdt.rs  gdt_simple.rs  idt.rs  init.rs  init_new.rs  keyboard.rs  mem.rs  mod.rs  panic.rs  pic.rs  serial.rs  tsc.rs  vga.rs
core/: mod.rs
core/capability/: mod.rs
core/ipc/: mod.rs  smr.rs  userspace_ipc.rs
core/scheduler/: mod.rs  trait.rs
core/syscall/: mod.rs  trait.rs
drivers/: ahci.rs  block.rs  gpt.rs  mod.rs  nvme.rs
drivers/audio/: hda.rs  mod.rs
drivers/gpu/: mod.rs  vmmouse.rs  vmware_svga.rs
isos/: aeterna.iso.checksums  ospab-os-v2-103.iso.sha256sums
lib/ane/: compiler.rs  layers.rs  mod.rs  optimizers.rs  tensor.rs
mm/: heap.rs
mm/numa/: mod.rs
mm/physical/: mod.rs
mm/virtual/: mod.rs
net/: arp.rs  dhcp.rs  diag.rs  dns.rs  e1000.rs  icmp.rs  ipv4.rs  mod.rs  resolver.rs  rtl8139.rs  sntp.rs  udp.rs
net/tls/: aes.rs  bignum.rs  gcm.rs  handshake.rs  hmac.rs  mod.rs  p256.rs  prf.rs  record.rs  rng.rs  sha256.rs  x509.rs
scripts/: checksum.sh
src/: bench.rs  boot_log.rs  console.rs  doom.rs  installer.rs  klog.rs  lib.rs  logger.rs  main.rs  pci.rs  print.rs  shell.rs  terminal.rs  terminal_old.rs  version.rs
src/userspace/: mod.rs
src/xhci/: mod.rs
vfs/: aeternafs.rs  disk_sync.rs  mod.rs  procfs.rs  ramfs.rs
(+25 files in other folders)
